# c-playground

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  main.c
lib/: point.c  point.h
src/: main.c
